--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=hystrix.stream
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 1000
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
